# NutriMind

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
configs/: model.yaml  orchestrator.yaml  tools.yaml  verl_agent_gigpo.yaml  verl_grpo.yaml  verl_grpo_4090d.yaml  verl_grpo_a800.yaml  verl_interaction.yaml  verl_tools.yaml
docs/: PRD.md  USDA_FoodData_Central_Guide.md  deployment.md  ideas.md  tech-stack.md
docs/changelog/: 2026-03-01_orchestrator_review.md  2026-03-06_trajectory_collection_fixes.md  2026-03-28_grpo_env_state_refactor.md  2026-03-28_grpo_implementation.md  2026-03-28_grpo_v1_metadata_simplification.md
docs/decisions/: 000-template.md  001-pure-text-tool-calling.md  002-retrieve-knowledge-mode-parameter.md  003-teacher-demonstration-prompting.md  004-tool-output-enrichment.md  historical-decisions.md
docs/ideas/: SOTA_agent_trajectory.md  architecture_alignment.md
docs/plans/: master_plan.md  phase1.2_rag_knowledge_base.md  phase1_infrastructure.md  phase2.5_sft_data_pipeline.md  phase2.6_trajectory_collection.md  phase2_sft_data.md  phase3_sft_training.md  phase4_grpo.md  phase5_ablation.md  phase6_evaluation.md  phase7_deployment.md
docs/specs/: database.md  orchestrator.md  rag.md  tools.md  training.md
examples/: usda_api_example.py
scripts/: build_indexes.py  build_usda_index.py  chunk_documents.py  clean_chunks.py  collect_sft_trajectories.py  collect_sources.py  contextualize_chunks.py  download_usda.py  dry_run_multiturn.py  evaluate_teacher_gap.py  evaluate_tier_accuracy.py  expand_query_pool.py  export_usda_foods.py  generate_linkage_queries.py  generate_multistep_queries.py  generate_query_candidates.py  generate_set_goal_queries.py  init_user_tables.py  merge_adapter.py  prepare_grpo_prompts_with_gemini.py  prepare_trl_data.py  prepare_verl_data.py  process_documents.py  run_sft_collection.py  run_trl_grpo_4090d.sh  run_verl_agent_gigpo.sh  run_verl_grpo.sh  run_verl_grpo_4090d.sh  run_verl_grpo_a800.sh  smoke_test_sft.sh  split_query_pool.py  test_agent_env.py  update_system_prompt.py
src/: config.py
src/orchestrator/: inference.py  orchestrator.py  tool_parser.py
src/retrieval/: chunker.py  domain_tagger.py  hybrid_retriever.py
tests/: test_adr007.py  test_gigpo_integration.py  test_rag_quality.py  test_smoke.py  test_tools.py  test_trl_migration.py  test_trl_smoke.py
(+46 files in other folders)
