[project]
name = "nutrimind"
version = "0.1.0"
description = "NutriMind Agent"
authors = [{ name = "NutriAgent Team" }]
dependencies = [
    "transformers",
    "openai",
    "httpx",
    "pydantic",
    "loguru",
    "pyyaml",
    "python-dotenv",
    "dashscope",
    "tenacity",
]
requires-python = ">=3.10"

[project.optional-dependencies]
retrieval = [
    "chromadb",
    "sentence-transformers",
    "rank-bm25",
    "beautifulsoup4",
    "lxml",
    "nltk",
    "docling",
]
inference = [
    "torch",
    "vllm",
]
training = [
    "torch",
    "trl",
    "peft",
    "datasets",
    "verl>=0.5.0",
    "sglang[all]>=0.3.0",
    "pyarrow>=14.0.0",
    "ray>=2.9.0",
    "wandb>=0.16.0",
]
