[project]
name = "nutrimind"
version = "0.1.0"
description = "NutriMind Agent"
authors = [{ name = "NutriAgent Team" }]
dependencies = [
    "transformers",
    "openai",
    "httpx",
    "pydantic",
    "loguru",
    "pyyaml",
    "python-dotenv",
    "dashscope",
    "tenacity",
]
requires-python = ">=3.10"

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu128"]

[project.optional-dependencies]
retrieval = [
    "chromadb",
    "sentence-transformers",
    "rank-bm25",
    "beautifulsoup4",
    "lxml",
    "nltk",
    "docling",
]
inference = [
    "torch==2.9.1",
    "vllm>=0.8.5,<=0.12.0",
]
training = [
    "torch==2.9.1",
    "trl<=0.9.6",
    "peft",
    "datasets",
    "verl>=0.5.0",
    "vllm>=0.8.5,<=0.12.0",
    "sglang==0.5.8",
    "pyarrow>=19.0.0",
    "ray>=2.41.0",
    "tensordict>=0.8.0,<=0.10.0,!=0.9.0",
    "numpy<2.0.0",
    "wandb>=0.16.0",
]
